--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 
 RewriteRule ^(about)/(data)/$ index.php?mainpage=$1&subpage=$2 [QSA]
-RewriteRule ^(info)/(enews|comparison|ranking|vul|client)/$ index.php?mainpage=$1&subpage=$2 [QSA]
+RewriteRule ^(info)/(enews|ranking|vul|client|network)/$ index.php?mainpage=$1&subpage=$2 [QSA]
 RewriteRule ^(query)/(event|ncert|contact|client|network|retrieve)/$ index.php?mainpage=$1&subpage=$2 [QSA]
 RewriteRule ^(vul)/(overview|search|target|retrieve)/$ index.php?mainpage=$1&subpage=$2 [QSA]
 RewriteRule ^(tool)/(nmap|ldap|hydra)/$ index.php?mainpage=$1&subpage=$2 [QSA]
