--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,12 @@
 !lib.a
 # 只忽略根目錄下的 TODO 檔案。 不包含子目錄下的 TODO
 /TODO
+# 忽略config/目錄下所有檔案
+config/
 # 忽略doc/notes.txt但不包含doc/server/arch.txt
 doc/*.txt
 # ignore all .txt files in the doc/ directory
 doc/**/*.txt
-# 忽略config/目錄下所有檔案
-config/*
 # ignore all .inc files
 *.inc.php
 # ignore all .csv files
