--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         }
     ],
     "require": {
-		"google/apiclient": "^2.7"
+		"google/apiclient": "^2.7",
+        "wixel/gump": "^1.2",
+		"phpmailer/phpmailer": "~6.1"
 	},
 	"autoload": {
 		"classmap": [
