--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 /TODO
 # 忽略config/目錄下所有檔案
 config/
+# 忽略vendor/目錄下所有檔案
+/vendor/
 # 忽略doc/notes.txt但不包含doc/server/arch.txt
 doc/*.txt
 # ignore all .txt files in the doc/ directory
@@ -15,6 +17,5 @@ doc/**/*.txt
 *.inc.php
 # ignore all .csv files
 *.csv
-
-
-/vendor/
+# ignore env file
+.env
