--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "wixel/gump": "^1.2",
 		"phpmailer/phpmailer": "^6.1",
 		"tamtamchik/simple-flash": "^2.0.0",
-        "vlucas/phpdotenv": "^5.2"
+        "vlucas/phpdotenv": "^5.2",
+        "phpoffice/phpspreadsheet": "^1.16"
 	},
 	"autoload": {
 		"classmap": [
