--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
 	"autoload": {
 		"classmap": [
 			"config",
-			"libraries"
+			"libraries",
+            "action",
+            "validators"
 		],
 		"files": [
 			"helpers/functions.php"
