--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,30 @@
-# 註解，會被忽略。
+# example 
 # 不要追蹤檔名為 .a 結尾的檔案
 *.a
 # 但是要追蹤 lib.a，即使上方已指定忽略所有的 .a 檔案
 !lib.a
 # 只忽略根目錄下的 TODO 檔案。 不包含子目錄下的 TODO
 /TODO
-# 忽略config/目錄下所有檔案
-config/
-# 忽略upload/目錄下所有檔案
-upload/
-# 忽略vendor/目錄下所有檔案
-vendor/
+
 # 忽略doc/notes.txt但不包含doc/server/arch.txt
 doc/*.txt
 # ignore all .txt files in the doc/ directory
 doc/**/*.txt
-# ignore all .inc files
+
+# ignore directory
+config/
+upload/
+vendor/
+
+
+# ignore all sub files
 *.inc.php
-# ignore all .csv files
 *.csv
-# ignore all .xls files
 *.xls*
+
 # ignore env file
 .env
+
 # ignore package lock files
 composer.lock
 package-lock.json
